Added labels to the nodes

--- a/templates/flask.html
+++ b/templates/flask.html
@@ -3,6 +3,7 @@
    <body>
       <form action = "http://localhost:5000/json_uploader" method = "POST"
          enctype = "multipart/form-data">
+         <center><p>Shotest Path Between Node Finder</p></center>
          <label>Start Node:</label>
          <input type="text" name="start_node"><br><br>
          <label>Target Node:</label>
