Refactor flask application for dynamic shortest path calculation algorithm

--- a/templates/flask.html
+++ b/templates/flask.html
@@ -1,7 +1,7 @@
 <!-- This is the request HTML Page-->
 <html>
 <head>
-    <title>Shotest Path Graph Plotter</title>
+    <title>Shortest Path Graph Plotter</title>
 
     <script type="text/javascript">
       function preventBack(){window.history.forward();}
