--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shotest Path Graph Plotter</title>
+    <title>Shortest Path Graph Plotter</title>
 
     <script type="text/javascript">
    function preventBack(){window.history.forward();}
